--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,29 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SignUpActivity">
+    android:layout_height="wrap_content"
+    tools:context=".SignUpActivity"
+    android:backgroundTint="@color/navy_blue"
+    >
 
     <TextView
         android:id="@+id/signUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SIGN UP PAGE"
-        android:textColor="@color/black"
+        android:layout_marginTop="150dp"
+        android:fontFamily="@font/pressstart2p"
+        android:text="SIGN UP"
+        android:textColor="@color/navy_blue"
         android:textSize="24sp"
+
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/editEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="32dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <EditText
         android:id="@+id/editEmailAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="45dp"
         android:hint="Your Email Address"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@id/editPassword"
@@ -71,25 +77,28 @@
         android:id="@+id/signUpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="@color/cream"
         android:text="Sign Up"
         app:layout_constraintBottom_toTopOf="@+id/switchToLogIn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editUsername"/>
+        app:layout_constraintTop_toBottomOf="@+id/editUsername"
+        android:textColor="@color/navy_blue"/>
 
     <TextView
         android:id="@+id/switchToLogIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Already a user? Sign in instead!"
-        android:textColor="#192EAB"
-        android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/signUpButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:clickable="true"
         android:focusable="true"
-        />
+        android:text="Already a user? Sign in instead!"
+        android:textColor="@color/navy_blue"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signUpButton" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
