--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,37 +6,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Username"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/storageText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="108dp"
         android:text="Storage Info"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="140dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/countdownButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="178dp"
+        android:layout_marginEnd="162dp"
         android:text="CLEAN"
-        app:layout_constraintTop_toBottomOf="@+id/storageText"
-        tools:layout_editor_absoluteX="161dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/storageText" />
 
     <TextView
         android:id="@+id/remaining_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="123dp"
-        android:layout_marginTop="231dp"
+        android:layout_marginTop="103dp"
         android:layout_marginEnd="123dp"
         android:text="time remaining:"
         android:textAlignment="center"
@@ -50,15 +59,13 @@
         android:layout_width="285dp"
         android:layout_height="112dp"
         android:layout_marginStart="63dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="125dp"
         android:layout_marginEnd="63dp"
-        android:layout_marginBottom="272dp"
         android:background="@color/cardview_dark_background"
         android:text="countdown"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="45sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/remaining_time" />
